--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="UTF-8">
+<link rel="stylesheet" href="https://unpkg.com/mvp.css">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
     <title>MakeTeam</title>
 </head>
 
@@ -22,57 +24,20 @@
     <form id="std-form">
         <input type="text" placeholder="Write a To Do and Press Enter" required />
     </form>
-    <ul id="std-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
     <button id="mkTeam">눌러서 팀 만들기</button>
-    <ul id="team1-list">
-        <!-- <li></li>        
+    <div style=" display: flex; ">
+        <ul id="std-list">
+            <!-- <li></li>        
+                <li></li>        
+                <li></li> -->
+        </ul>
+
+        <ul id="team1-list">
+            <!-- <li></li>        
             <li></li>        
             <li></li> -->
         </ul>
-    <ul id="team2-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
-    <ul id="team3-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
-    <ul id="team4-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
-    <ul id="team6-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
-    <ul id="team7-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
-    <ul id="team8-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
-    <ul id="team9-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
-    <ul id="team9-list">
-        <!-- <li></li>        
-            <li></li>        
-            <li></li> -->
-    </ul>
+    </div>
     <!-- <img src =""/> -->
     <script src="js/greeting.js"></script>
     <script src="js/std.js"></script>
